--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,11 +33,13 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.5.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation "androidx.core:core-ktx:$project.android_x_core_version"
+    implementation "androidx.appcompat:appcompat:$project.app_compat_version"
+    implementation "com.google.android.material:material:$project.android_material_version"
+    implementation "androidx.constraintlayout:constraintlayout:$project.constraint_layout_version"
+
+    //Tests
+    testImplementation "junit:junit:$project.junit_version"
+    androidTestImplementation "androidx.test.ext:junit:$project.android_ext_test_version"
+    androidTestImplementation "androidx.test.espresso:espresso-core:$project.android_expresso_version"
 }
