--- a/build.gradle
+++ b/build.gradle
@@ -8,3 +8,13 @@ plugins {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+ext {
+    android_x_core_version = "1.7.0"
+    app_compat_version = "1.4.1"
+    android_material_version = "1.5.0"
+    constraint_layout_version = "2.1.3"
+    junit_version = "4.13.2"
+    android_ext_test_version = "1.1.3"
+    android_expresso_version = "3.4.0"
+}
