Add Hilt dependency and setup Hilt's class code generation

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
+    id 'dagger.hilt.android.plugin'
 }
 
 android {
@@ -37,6 +39,9 @@ dependencies {
     implementation "androidx.appcompat:appcompat:$project.app_compat_version"
     implementation "com.google.android.material:material:$project.android_material_version"
     implementation "androidx.constraintlayout:constraintlayout:$project.constraint_layout_version"
+    //Dagger
+    implementation "com.google.dagger:hilt-android:2.38.1"
+    kapt "com.google.dagger:hilt-compiler:2.38.1"
 
     //Tests
     testImplementation "junit:junit:$project.junit_version"
