--- a/build.gradle
+++ b/build.gradle
@@ -18,4 +18,5 @@ ext {
     junit_version = "4.13.2"
     android_ext_test_version = "1.1.3"
     android_expresso_version = "3.4.0"
+    room_version = "2.4.2"
 }
